--- a/config/plugin.properties
+++ b/config/plugin.properties
@@ -1,6 +1,6 @@
-app_id = vue_app_template;
-version_name = 0.6.5;
-version_code = 065;
+app_id = e;
+version_name = 0.0.1;
+version_code = 001;
 type = html5;
-frame = vue;
-platform = [ios,android]
+platform = [ios,android];
+frame = vue
