--- a/config/config.properties
+++ b/config/config.properties
@@ -1,3 +1,3 @@
-hideWebViewTitle=false;
-hideOptionMenu=true;
-hideToolbar=true; 
+hideWebViewTitle = false;
+hideOptionMenu = true;
+hideToolbar = true
