--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "node_demo",
-  "version": "0.0.1",
-  "description": "",
+  "name": "minxing-cli",
+  "version": "0.0.2",
+  "description": "敏行插件应用脚手架",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -27,5 +27,9 @@
     "ora": "^3.4.0",
     "simple-git": "^1.110.0",
     "touch": "^3.1.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/a1245582339/minxing-cli"
   }
 }
